Formatted files with Google Checkstyle